refactor: Remove Colletors to .toList